<resources>
    <string name="app_name">대림대학교 캠퍼스맵</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">대림대학교 캠퍼스맵</string>
    <string name="nav_header_subtitle">캠퍼스맵</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dasan_mini">미니다산관</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_hongji">홍지관</string>
    <string name="menu_car">자동차관\n</string>
    <string name="menu_center">대학본부\n</string>
    <string name="menu_dasan">다산관\n</string>
    <string name="menu_jungbo">정보통신관</string>
    <string name="menu_junsan">전산관</string>
    <string name="menu_limgok">임곡관</string>
    <string name="menu_saenghwal">생활관\n</string>
    <string name="menu_hanlim">한림관\n</string>
    <string name="menu_yulgok">율곡관\n</string>
    <string name="menu_toegye">퇴계관</string>
    <string name="menu_student">학생회관\n</string>
    <string name="menu_sooam">수암관\n</string>
    <string name="Idx">202030108 김찬규\n202130131 최원재\n202130132 염재현\n202130133 최현기</string>
    <string name="todo">TODO</string>
    <string name="hongji_b1f">홍지관지하1층</string>
    <string name="hongji_1f">홍지관1층</string>
    <string name="hongji_2f">홍지관2층</string>
    <string name="hongji_3f">홍지관3층</string>
    <string name="hongji_4f">홍지관4층</string>
    <string name="hongji_5f">홍지관5층</string>
    <string name="hongji_6f">홍지관6층</string>
    <string name="hanlim_1f">한림관1층</string>
    <string name="hanlim_2f">한림관2층</string>
    <string name="hanlim_3f">한림관3층</string>
    <string name="hanlim_4f">한림관4층</string>
    <string name="jungbo_1f">정통관1층</string>
    <string name="jungbo_2f">정통관2층</string>
    <string name="jungbo_3f">정통관3층</string>
    <string name="jungbo_4f">정통관4층</string>
    <string name="building_info">학부학과 URL https://www.daelim.ac.kr/cms/FrCon/index.do?MENU_ID=1760\n
각 건물 전화번호\n
기계공학과   다산관 5층   467-4808   \n
건축과           퇴계관 7층   467-4929  \n
소방안전설비과   다산관 4층   467-4678, 4827   \n
로봇자동화공학과   율곡관 5층   467-4890, 4850, 4738   \n
반도체학과   율곡관 4층   467-4469   \n
방송음향기술과   정보통신관 2층   467-4510   \n
영상디자인과   정보통신관 2층   467-4518   \n
미래자동차공학부   자동차관 4층   467-4839   \n
전기공학과   율곡관 3층   467-4621, 4737   \n
AI시스템과   정보통신관 4층   467-4909, 4907   \n
컴퓨터정보학부(응용sw전공)   전산관 3층   467-4880, 4429, 4889  \n
건설환경공학과   퇴계관 2층   467-4618, 4919   \n
실내디자인학부   퇴계관 5층   467-4939, 4930   \n
해군기술부사관과   한림관 2층   467-4470   \n
인문사회계열   경영학과   퇴계관 4층   467-4572, 4674   \n
사무행정학과   수암관 2층   467-4970, 4979   \n
도서관미디어정보과   수암관 5층   467-4969, 4960 \n
사회복지학과   수암관 1층   467-4540, 4541  \n
유아교육과   홍지관 6층   467-4658   \n
항공서비스과   홍지관 4층   467-4959, 4951  \n
호텔레저학과   임곡관 3층   467-4418   \n
예체능계열   스포츠재활과   한림관 1층   467-4991\n
스포츠지도과   한림관 1층   467-4989      \n
자연과학계열   언어치료학과   홍지관 5층   467-4401  \n
호텔조리과   율곡관 7층   467-4787, 4780   \n
제과제빵과   율곡관 6층   467-4491, 4681   \n
보건안전학과   퇴계관 3층   467-4949   \n
보건의료공학과   다산관 3층   467-4838   \n
보건의료행정과   퇴계관 2층   467-4561   \n
대림대홈페이지 URL https://www.daelim.ac.kr/index.do\n
학생포털 URL https://pt.daelim.ac.kr/\n
BigForest URL https://dllms.daelim.ac.kr/\n
장학금     URL https://www.daelim.ac.kr/cms/FrCon/index.do?MENU_ID=990#page1\n
공지사항   URL https://www.daelim.ac.kr/cms/FrCon/index.do?MENU_ID=900#page1\n
</string>
    <string name="car_1f">자동차관1층</string>
    <string name="car_3f">자동차관3층</string>
    <string name="car_4f">자동차관4층</string>
    <string name="car_5f">자동차관5층</string>
    <string name="car_6f">자동차관6층</string>
    <string name="car_7f">자동차관7층</string>
    <string name="yulgok_1f">율곡관1층</string>
    <string name="yulgok_2f">율곡관2층</string>
    <string name="yulgok_3f">율곡관3층</string>
    <string name="yulgok_4f">율곡관4층</string>
    <string name="yulgok_5f">율곡관5층</string>
    <string name="yulgok_6f">율곡관6층</string>
    <string name="yulgok_7f">율곡관7층</string>
    <string name="toegye_1f">퇴계관1층</string>
    <string name="toegye_2f">퇴계관2층</string>
    <string name="toegye_3f">퇴계관3층</string>
    <string name="toegye_4f">퇴계관4층</string>
    <string name="toegye_5f">퇴계관5층</string>
    <string name="toegye_6f">퇴계관6층</string>
    <string name="toegye_7f">퇴계관7층</string>
    <string name="daelimcampus">대림대캠퍼스맵</string>
    <string name="home">홈\n</string>
    <string name="string_car1f_1">①강의실</string>
    <string name="string_car1f_2">②L0104 강의실</string>
    <string name="string_car1f_3">③차고</string>
    <string name="string_car3f_1">①L0301 강의실</string>
    <string name="string_car3f_2">②xEV실습실</string>
    <string name="string_car3f_3">③차고 및 실습실</string>
    <string name="string_car4f_1">①교수연구실</string>
    <string name="string_car4f_2">②핵심융합대학</string>
    <string name="string_car4f_3">③미래자동차\n학부관리실</string>
    <string name="string_car4f_4">④자동차공학과</string>
    <string name="string_car4f_5">⑤교수연구실</string>
    <string name="string_car4f_6">⑥강의실L0417</string>
    <string name="string_car4f_7">⑦강의실L0413</string>
    <string name="string_car4f_8">⑧COSS STATION</string>
    <string name="string_car4f_9">⑨교수연구실L0512</string>
    <string name="string_car4f_10">⑩엔진실습실L0407</string>
    <string name="string_car4f_11">⑪강의실L0401</string>
    <string name="string_car5f_1">①PBL강의실L0515</string>
    <string name="string_car5f_2">②PBL강의실L0513</string>
    <string name="string_car5f_3">③미래자동차스튜디오\nL0507</string>
    <string name="string_car5f_4">④세미나실</string>
    <string name="string_car5f_5">⑤카티아실습실</string>
    <string name="string_car5f_6">⑥알파프로젝트룸\nL0501</string>
    <string name="string_car5f_7">⑦교수연구실</string>
    <string name="string_car6f_1">①강의실\nL0602</string>
    <string name="string_car6f_2">②강의실\nL0610</string>
    <string name="string_car6f_3">③상담실</string>
    <string name="string_car6f_4">④학적자료실 </string>
    <string name="string_car6f_5">⑤혁신융합대학\n미래자동차사업단\nL0617</string>
    <string name="string_car6f_6">⑥전기전자\n제어실습실</string>
    <string name="string_car6f_7">⑦섀시실습실\nL0609</string>
    <string name="string_car6f_8">⑧자율주행실습실\nL0608</string>
    <string name="string_car6f_9">⑨3D프린터실습실\nL0605</string>
    <string name="string_car7f_1">①강의실\nL0702</string>
    <string name="string_car7f_2">②평생지원팀\nL0709</string>
    <string name="string_car7f_3">③실습재료실\nL0719</string>
    <string name="string_car7f_4">④학습자휴게실\nL0717 </string>
    <string name="string_car7f_5">⑤평생교육원장\nL0715</string>
    <string name="string_car7f_6">⑥강사휴게실\nL0713</string>
    <string name="string_car7f_7">⑦강의실\nL0709</string>
    <string name="string_car7f_8">⑧강의실\nL0705</string>
    <string name="string_car7f_9">⑨강의실\nL0701</string>
    <string name="string_toegye1f_1">①교양강의실\nE0101</string>
    <string name="string_toegye1f_2">②합동강의실\nE0107</string>
    <string name="string_toegye1f_3">③합동강의실\nE0111</string>
    <string name="string_toegye1f_4">④대림대학보사</string>
    <string name="string_toegye1f_5">⑤반도체부품\n실습실</string>
    <string name="string_toegye1f_6">⑥컴퓨터\n유지보수실</string>
    <string name="string_toegye1f_7">⑦EMC기술\n교육센터</string>
    <string name="string_toegye1f_8">⑧UTM실</string>
    <string name="string_toegye2f_1">①토목캐드1</string>
    <string name="string_toegye2f_2">②토목캐드2</string>
    <string name="string_toegye2f_3">③측량기자재실</string>
    <string name="string_toegye2f_4">④토목금융실험실</string>
    <string name="string_toegye2f_5">⑤임상피학\n실습실</string>
    <string name="string_toegye2f_6">⑥보건의료행정과\n관리실</string>
    <string name="string_toegye2f_7">⑦강의실\nE0225</string>
    <string name="string_toegye2f_8">⑧강의실\nE0221</string>
    <string name="string_toegye2f_9">⑨강의실\nE0217</string>
    <string name="string_toegye2f_10">⑩토목환경과\n관리실</string>
    <string name="string_toegye2f_11">⑪교수연구실</string>
    <string name="string_toegye2f_12">⑫교수연구실</string>
    <string name="string_toegye2f_13">⑬교수연구실</string>
    <string name="string_toegye2f_14">⑭교수연구실</string>
    <string name="string_toegye2f_15">⑮교수연구실</string>
    <string name="string_toegye3f_1">①데이터분석실\nE0302</string>
    <string name="string_toegye3f_2">②실습재료실\nE0303</string>
    <string name="string_toegye3f_3">③보건의료강의실</string>
    <string name="string_toegye3f_4">④의무기록정보\n실습실E0323</string>
    <string name="string_toegye3f_5">⑤의료정보전산\n실습실E0322</string>
    <string name="string_toegye3f_6">⑥보건의료행정과\nE0328 </string>
    <string name="string_toegye3f_7">⑦경영지원PBL실\nE0329</string>
    <string name="string_toegye3f_8">⑧비즈니스실(경영)\nE0325</string>
    <string name="string_toegye3f_9">⑨경영세미나실\nE0321</string>
    <string name="string_toegye3f_10">⑩강의실\nE0317</string>
    <string name="string_toegye3f_11">⑪교수연구실</string>
    <string name="string_toegye3f_12">⑫교수연구실</string>
    <string name="string_toegye3f_13">⑬교수연구실</string>
    <string name="string_toegye3f_14">⑭교수연구실</string>
    <string name="string_toegye3f_15">⑮보건안전학과\nE0301</string>
    <string name="string_toegye4f_1">①외래교수실\nE0401</string>
    <string name="string_toegye4f_2">②교양강의실\nE0402</string>
    <string name="string_toegye4f_3">③합동강의실\nE0410</string>
    <string name="string_toegye4f_4">④프레젠테이션실\nE0418</string>
    <string name="string_toegye4f_5">⑤비즈니스상담\n실습실E0424</string>
    <string name="string_toegye4f_6">⑥경영정보실</string>
    <string name="string_toegye4f_7">⑦경영학과관리실\nE0419</string>
    <string name="string_toegye4f_8">⑧교수연구실</string>
    <string name="string_toegye4f_9">⑨창의경영실\nE0417</string>
    <string name="string_toegye4f_10">⑩English\nLounge3</string>
    <string name="string_toegye4f_11">⑪교양학사교양\n직업교육센터</string>
    <string name="string_toegye4f_12">⑫교양직업교육\n센터장E0406</string>
    <string name="string_toegye4f_13">⑬교양기자재실\nE0409</string>
    <string name="string_toegye4f_14">⑭외래교수실\nE0401</string>
    <string name="string_toegye5f_1">①컴퓨터그래픽실1\nE0502</string>
    <string name="string_toegye5f_2">②컴퓨터그래픽실2\nE0508</string>
    <string name="string_toegye5f_3">③출력실\nE0510</string>
    <string name="string_toegye5f_4">④실습재료실\nE0516</string>
    <string name="string_toegye5f_5">⑤ACE스테이션</string>
    <string name="string_toegye5f_6">⑥강의실\nE0519</string>
    <string name="string_toegye5f_7">⑦전공디자인실4\nE0523</string>
    <string name="string_toegye5f_8">⑧전공디자인실3\nE0517</string>
    <string name="string_toegye5f_9">⑨스타트업\n라운지</string>
    <string name="string_toegye5f_10">⑩실내디자인학부\nE0513</string>
    <string name="string_toegye5f_11">⑪전공디자인실2\nE0507</string>
    <string name="string_hongji3f_1">①호텔관광과 사무\n관리실</string>
    <string name="string_hongji3f_2">②상담실</string>
    <string name="string_hongji3f_3">③호텔객실실습실</string>
    <string name="string_hongji3f_4">④ACE hall</string>
    <string name="string_hongji3f_5">⑤T/C실습실</string>
    <string name="string_hongji3f_6">⑥강의실1</string>
    <string name="string_hongji3f_7">⑦강의실2</string>
    <string name="string_hongji3f_8">⑧Meister Station</string>
    <string name="string_hongji3f_9">⑨교수연구실1</string>
    <string name="string_hongji3f_10">⑩교수연구실2</string>
    <string name="string_hongji3f_11">⑪교수연구실3</string>
    <string name="string_hongji3f_12">⑫교수연구실4</string>
    <string name="string_hongji3f_13">⑬교수연구실5</string>
    <string name="string_hongji3f_14">⑭교수연구실6</string>
    <string name="string_hongji3f_15">⑭멀티미디어실습실</string>
    <string name="string_jungbo2f_1">①방송응향기술과\n영상디자인과 관리실</string>
    <string name="string_jungbo2f_2">②음향영상편집실</string>
    <string name="string_jungbo2f_3">③창고</string>
    <string name="string_jungbo2f_4">④멀티미디어실습실1</string>
    <string name="string_jungbo2f_5">⑤조정실1</string>
    <string name="string_jungbo2f_6">⑥멀티미디어실습실2</string>
    <string name="string_jungbo2f_7">⑦교수연구실2</string>
    <string name="string_jungbo2f_8">⑧교수연구실3</string>
    <string name="string_jungbo2f_9">⑨교수연구실4</string>
    <string name="string_jungbo2f_10">⑩교수연구실\n음향연구소</string>
    <string name="string_jungbo2f_11">⑪음향스튜디오</string>
    <string name="string_jungbo2f_12">⑫레코딩스튜디오</string>
</resources>