<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.jungbo.Jungbo2fFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_jungbo_2f_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_jungbo_2f_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="240dp" />

        <ImageView
            android:id="@+id/jungboimage_2f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/jungbo2fmap"
            android:contentDescription="@string/todo"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp" />

        <ImageView
            android:id="@+id/overlay_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_maker"
            android:visibility="gone"
            android:contentDescription="@string/todo"
            app:layout_constraintTop_toTopOf="@id/jungboimage_2f"
            app:layout_constraintStart_toStartOf="@id/jungboimage_2f" />

    <TextView
        android:id="@+id/text_jungbo2f1"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="@string/string_jungbo2f_1"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/jungboimage_2f"
        app:layout_constraintStart_toStartOf="@id/guideline_start_jungbo_2f_1"
        tools:ignore="MissingConstraints"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/text_jungbo2f2"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="@string/string_jungbo2f_2"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start_jungbo_2f_2"
        app:layout_constraintTop_toBottomOf="@id/jungboimage_2f"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/text_jungbo2f3"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:text="@string/string_jungbo2f_3"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@id/jungboimage_2f"
        app:layout_constraintStart_toStartOf="@id/guideline_start_jungbo_2f_1"
        tools:ignore="MissingConstraints"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/text_jungbo2f4"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:text="@string/string_jungbo2f_4"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start_jungbo_2f_2"
        app:layout_constraintTop_toBottomOf="@id/jungboimage_2f"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/text_jungbo2f6"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="135dp"
        android:gravity="center"
        android:text="@string/string_jungbo2f_6"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start_jungbo_2f_2"
        app:layout_constraintTop_toBottomOf="@id/jungboimage_2f"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/text_jungbo2f9"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="235dp"
        android:gravity="center"
        android:text="@string/string_jungbo2f_9"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/jungboimage_2f"
        app:layout_constraintStart_toStartOf="@id/guideline_start_jungbo_2f_1"
        tools:ignore="MissingConstraints"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/text_jungbo2f8"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="190dp"
        android:gravity="center"
        android:text="@string/string_jungbo2f_8"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start_jungbo_2f_2"
        app:layout_constraintTop_toBottomOf="@id/jungboimage_2f"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/text_jungbo2f10"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginTop="235dp"
        android:gravity="center"
        android:text="@string/string_jungbo2f_10"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start_jungbo_2f_2"
        app:layout_constraintTop_toBottomOf="@id/jungboimage_2f"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_jungbo2f11"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="285dp"
        android:gravity="center"
        android:text="@string/string_jungbo2f_11"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/jungboimage_2f"
        app:layout_constraintStart_toStartOf="@id/guideline_start_jungbo_2f_1"
        tools:ignore="MissingConstraints"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/text_jungbo2f12"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginTop="285dp"
        android:gravity="center"
        android:text="@string/string_jungbo2f_12"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start_jungbo_2f_2"
        app:layout_constraintTop_toBottomOf="@id/jungboimage_2f"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/text_jungbo2f7"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginTop="185dp"
        android:gravity="center"
        android:text="@string/string_jungbo2f_7"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/jungboimage_2f"
        app:layout_constraintStart_toStartOf="@id/guideline_start_jungbo_2f_1"
        tools:ignore="MissingConstraints"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/text_jungbo2f5"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="135dp"
        android:gravity="center"
        android:text="@string/string_jungbo2f_5"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@id/jungboimage_2f"
        app:layout_constraintStart_toStartOf="@id/guideline_start_jungbo_2f_1"
        tools:ignore="MissingConstraints"
        android:clickable="true"
        android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>