<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.hanlim.HanlimFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_hanlim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="60dp" />

    <ImageView
        android:id="@+id/image_hanlimbuilding"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/hanlim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/text_hanlim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <ImageView
        android:id="@+id/image_carline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@drawable/carline"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_hanlim"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/hanlim1f"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/hanlim_1f"
        android:src="@drawable/hanlim1f"
        app:layout_constraintStart_toStartOf="@id/guideline_start_hanlim"
        app:layout_constraintTop_toBottomOf="@id/image_carline" />

    <ImageButton
        android:id="@+id/hanlim2f"
        android:layout_width="334dp"
        android:layout_height="68dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/hanlim_2f"
        android:src="@drawable/hanlim2f"
        app:layout_constraintStart_toStartOf="@id/guideline_start_hanlim"
        app:layout_constraintTop_toBottomOf="@id/hanlim1f" />

    <ImageButton
        android:id="@+id/hanlim3f"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/hanlim_3f"
        android:src="@drawable/hanlim3f"
        app:layout_constraintStart_toStartOf="@id/guideline_start_hanlim"
        app:layout_constraintTop_toBottomOf="@id/hanlim2f" />

    <ImageButton
        android:id="@+id/hanlim4f"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/hanlim_4f"
        android:src="@drawable/hanlim4f"
        app:layout_constraintStart_toStartOf="@id/guideline_start_hanlim"
        app:layout_constraintTop_toBottomOf="@id/hanlim3f" />


</androidx.constraintlayout.widget.ConstraintLayout>